--- a/css/app.css
+++ b/css/app.css
@@ -10184,6 +10184,14 @@ body {
   padding: 0.5rem 1.5rem;
 }
 
+.form-control:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: unset;
+  outline: 0;
+  box-shadow: none;
+}
+
 @media (max-width: 991px) {
   .navbar .nav-item .navbar-nav .nav-item {
     padding: 0;
