--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -52,6 +52,14 @@ body {
   }
 }
 
+.form-control:focus {
+   color: #495057;
+   background-color: #fff;
+   border-color: unset;
+   outline: 0;
+   box-shadow: none;
+}
+
 .navbar .nav-item {
   .navbar-nav .nav-item {
     @media (max-width: 991px) {
