--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -40,9 +40,11 @@ body {
 }
 
 .footer-container {
-  display: table-footer-group;
   vertical-align: top;
   width: 100%;
+  @media (min-width: 768px) {
+    display: table-footer-group;
+  }
 }
 
 .l_header--menu {
@@ -119,8 +121,7 @@ button:focus {
   font-size: 2.25rem;
   display: inline-flex;
   position: relative;
-  //font-family: 'Montserrat Bold', sans-serif;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
@@ -141,8 +142,7 @@ button:focus {
 }
 
 .l_header--h2 {
-  //font-family: 'MontserratMedium', sans-serif;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-weight: 500;
   padding: 0 15%;
   margin-bottom: 0;
@@ -162,7 +162,7 @@ button:focus {
   position: relative;
   z-index: 100;
   background-color: rgb(255, 253, 253);
-  box-shadow: 0px 0px 5.95px 1.05px rgba(69, 65, 78, 0.08);
+  box-shadow: 0 0 5.95px 1.05px rgba(69, 65, 78, 0.08);
   @media (min-width: 1200px) {
     padding: 1.375rem 0;
   }
@@ -172,6 +172,11 @@ button:focus {
     @media (max-width: 991px) {
       background-color: white;
       padding: 0.5rem 1rem !important;
+    }
+    .dashboard & .navbar-brand {
+      @media (min-width: 1200px) {
+        margin-left: 5rem;
+      }
     }
   }
 
@@ -565,12 +570,11 @@ button:focus {
 }
 
 .cal_img-thumb {
-  width: 0;
-  height: 0;
+  width: 115px;
+  height: 115px;
   position: absolute;
   z-index: 99;
-  opacity: 0;
-  visibility: hidden;
+  display: none;
   border-radius: 10px;
   border: 2px solid #e3c7ff;
 }
