--- a/src/scss/util.scss
+++ b/src/scss/util.scss
@@ -17,7 +17,11 @@
   }
 }
 
-
+.mb-lx-5{
+  @media (max-width: 1200px) {
+    margin-bottom: 3rem !important;
+  }
+}
 
 .w-26--after {
   &::after {
@@ -105,8 +109,27 @@
   font-size: 1.5rem;
   color: #777777;
   padding: 2.1875rem 1.5625rem;
+  @media (max-width: 1600px) {
+    padding: 1.8rem 1.5625rem;
+  }
 }
 
 .ui-page{
   height: 100%;
+}
+
+.p-07{
+  padding: 0.7rem;
+}
+
+.p-xxl-3{
+  @media (min-width: 1600px) {
+    padding: 1rem !important;
+  }
+}
+
+.mt-xxl-5{
+  @media (min-width: 1600px) {
+    margin-top: 3rem !important;
+  }
 }
