--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,7 +1,8 @@
+@import "variables";
+
 .navbar-collapse {
   -webkit-transition: all 1s ease-in-out;
   -moz-transition: all 1s ease-in-out;
-  -ms-transition: all 1s ease-in-out;
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
   -webkit-transform: translate3d(0,0,0);
@@ -59,7 +60,7 @@
 .dropdown-item.active, .dropdown-item:active {
   color: #212529;
   text-decoration: none;
-  background-color: #f8f9fa;
+  background-color: $gray-100;
 }
 
 .navbar-nav .dropdown-menu{
@@ -71,7 +72,7 @@
     }
     .dropdown-item:hover, .dropdown-item:focus {
       color: #16181b;
-      background-color: #f8f9fa;
+      background-color: $gray-100;
     }
   }
 }
